finish the player page and add music list page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   assets_audio_player: ^3.0.5
+  sleek_circular_slider: ^2.0.1
+  palette_generator: ^0.3.3+2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
